--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   repository_dispatch:
-    types: [base_image_updated]
+    types: ["Base Image Updated"]
 
 jobs:
   mainline_alpine:
